# assesment/handler/product.go
@@ -22,10 +22,9 @@ func NewProductHandler(ProductUsecase *usecase.ProductUsecase) *ProductHandler {
 // Create products godoc
 // @Summary Create Product.
 // @Description create product.
-// @Tags products
-// @Param Body body entity.ProductRequest true "silahkan daftarkan data product"
+// @Tags Products
+// @Param Body formData entity.ProductRequest true "silahkan daftarkan data product"
 // @Consumes multipart/form-data
-// @Param Body formData file true "file anda"
 // @Produce json
 // @Success 201 {object} entity.ProductResponse
 // @Router /products/create [post]
@@ -72,6 +71,13 @@ func (handler ProductHandler) CreateProduct(c echo.Context) error {
 	return c.JSON(201, Product)
 }
 
+// GetAllProducts godoc
+// @Summary Get All Product.
+// @Description get product.
+// @Tags Products
+// @Produce json
+// @Success 201 {object} []entity.ProductResponse
+// @Router /products [get]
 func (handler ProductHandler) GetAllProduct(c echo.Context) error {
 
 	Product, err := handler.ProductUsecase.GetAllProduct()
@@ -83,6 +89,14 @@ func (handler ProductHandler) GetAllProduct(c echo.Context) error {
 	return c.JSON(200, Product)
 }
 
+// GetUserById godoc
+// @Summary Get User By Id
+// @Description get User by id.
+// @Tags Products
+// @Produce json
+// @Param id path string true "user id"
+// @Success 200 {object} entity.ProductResponse
+// @Router /products/{id} [get]
 func (handler ProductHandler) GetProductByID(c echo.Context) error {
 	productId, _ := strconv.Atoi(c.Param("id"))
 
@@ -94,6 +108,14 @@ func (handler ProductHandler) GetProductByID(c echo.Context) error {
 	return c.JSON(200, product)
 }
 
+// Get Products by category godoc
+// @Summary Get Products by category
+// @Description get products by category.
+// @Tags Products
+// @Produce json
+// @Param category path string true "product category"
+// @Success 200 {object} string
+// @Router /products/{category} [get]
 func (handler ProductHandler) GetProductByCategory(c echo.Context) error {
 	productCategory := c.Param("category")
 
@@ -105,6 +127,14 @@ func (handler ProductHandler) GetProductByCategory(c echo.Context) error {
 	return c.JSON(200, product)
 }
 
+// Get Products by price godoc
+// @Summary Get Products by price
+// @Description Get Products by price.
+// @Tags Products
+// @Produce json
+// @Param Body priceMin,priceMax path string true "product price"
+// @Success 200 {object} string
+// @Router /products/{priceMin}/{priceMax} [get]
 func (handler ProductHandler) GetProductByPrice(c echo.Context) error {
 	priceMin, _ := strconv.Atoi(c.Param("priceMin"))
 	priceMax, _ := strconv.Atoi(c.Param("priceMax"))
@@ -116,6 +146,15 @@ func (handler ProductHandler) GetProductByPrice(c echo.Context) error {
 	return c.JSON(200, product)
 }
 
+// Update products godoc
+// @Summary Update Product.
+// @Description Update product.
+// @Tags Products
+// @Param Body formData entity.ProductRequest true "silahkan update data product"
+// @Consumes multipart/form-data
+// @Produce json
+// @Success 201 {object} entity.ProductResponse
+// @Router /products/update [post]
 func (handler ProductHandler) UpdateProduct(c echo.Context) error {
 	ProductId, err := strconv.Atoi(c.Param("id"))
 	name := c.FormValue("name")
@@ -162,6 +201,14 @@ func (handler ProductHandler) UpdateProduct(c echo.Context) error {
 	return c.JSON(200, Product)
 }
 
+// DeleteProduct godoc
+// @Summary Delete Product
+// @Description Delete Product by id.
+// @Tags Products
+// @Produce json
+// @Param id path int true "product id"
+// @Success 200 {object} string
+// @Router /products/{id} [delete]
 func (handler ProductHandler) DeleteProduct(c echo.Context) error {
 	ProductId, _ := strconv.Atoi(c.Param("id"))
 	err := handler.ProductUsecase.DeleteProduct(ProductId)
